<resources>
    <string name="app_name">StudentListApp</string>

    <!-- Main Activity -->
    <string name="text_view_text">Total student count:</string>
    <string name="text_view_count">Total student count</string>
    <string name="student_name_hint">Student Name</string>
    <string name="student_surname_hint">Student Surname</string>
    <string name="add_student_button_text">Add Student</string>
    <string name="view_student_list_button_text">View Student List</string>
</resources>